[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy1.gd" type="Script" id=2]
[ext_resource path="res://sounds/Explosion7.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 10.0499

[node name="enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 18
emission_shape = 1
emission_sphere_radius = 22.13
gravity = Vector2( 0, 0 )
linear_accel = 21.36
radial_accel = 58.25
tangential_accel = 33.01
tangential_accel_random = 0.7
damping = 22.33
damping_random = 0.22
scale_amount = 2.0
scale_amount_random = 1.0
color = Color( 1, 0, 0, 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
